# fst2framegraph

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements-fst.txt  requirements.txt  run_in_colab.ipynb  run_pipeline.py
.github/workflows/: tests.yml
data/framebase/: README.md
data/pilot/: mini_pilot_fst_output.csv  mini_pilot_sentences.csv
docs/: citation.md  colab_quickstart.md  framebase_setup.md  graph_schema.md  input_inspection.md  input_schema.md  limitations.md  methodology.md  pilot_report.md  quickstart.md  spin_dereification.md  v03_smoke.md  web_artifact.md
examples/: flat_only_old_fst.csv  fst_like.jsonl  oxccal_sample.csv  sentences.csv  toy_fst_output.csv
scripts/: download_framebase.py  fetch_wheels.py  install_colab_fst.py  run_toy.sh  smoke_test.sh
src/fst2framegraph/: __init__.py  cli.py  schema.py
src/fst2framegraph/adapters/: __init__.py
src/fst2framegraph/analysis/: __init__.py  base.py
src/fst2framegraph/framebase/: download.py  index.py  iri.py  load_dbp_labels.py  load_schema.py  parse_dered_rules.py  parse_spin_rules.py  rule_index.py  stream_rdf.py
src/fst2framegraph/fst/: __init__.py  export.py
src/fst2framegraph/graph/: build_dereified.py  build_nested.py  build_reified.py  builder.py  export_graph.py
src/fst2framegraph/io/: column_detection.py  inspect_outputs.py  read_fst.py  transcripts.py  web_artifact.py  write_outputs.py
src/fst2framegraph/normalise/: fillers.py  ids.py  text.py
src/fst2framegraph/pipeline_v2/: __init__.py  chunking.py  extract.py  graph_and_analysis.py  input_schema.py  materialize.py  orchestrator.py  preflight.py  report.py  text_cleaning.py
src/fst2framegraph/qc/: ambiguity_report.py  coverage_report.py  validation.py
tests/: test_analysis_base.py  test_colab_installer.py  test_colab_notebook.py  test_dered_rule_parser.py  test_encode_with_fst_api.py  test_frame_graph_builder.py  test_framebase_download.py  test_framebase_index.py  test_framebase_iri.py  test_inspect_convert.py  test_nested_graph.py  test_pipeline_integration.py  test_pipeline_v2_best_of_both.py  test_pipeline_v2_cli_parity.py  test_pipeline_v2_colab_notebook.py  test_pipeline_v2_input_and_cleaning.py  test_pipeline_v2_integration.py  test_pipeline_v2_preflight.py  test_pipeline_v2_resumability.py  test_spin_dereification.py  test_streaming_recovery.py  test_toy_sentence.py  test_transcripts.py  test_web_artifact.py
wheels/: README.md  manifest.json
