[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fst2framegraph"
version = "0.4.0-alpha"
description = "Convert FrameNet-style parser output into FrameBase-compatible reified, nested and dereified semantic graphs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "fst2framegraph contributors"}
]
keywords = ["FrameNet", "FrameBase", "knowledge graph", "semantic role labelling", "NLP"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = [
  "pandas>=2.0",
  "networkx>=3.0",
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0"
]

[project.optional-dependencies]
fst = [
  "protobuf>=3.20.1,<4.0.0",
  "frame-semantic-transformer==0.10.0",
  "sentencepiece==0.2.0",
  "numpy==1.26.4",
  "tqdm==4.66.4",
  "dill==0.3.8"
]
colab = [
  "protobuf>=3.20.1,<4.0.0",
  "frame-semantic-transformer==0.10.0",
  "sentencepiece==0.2.0",
  "numpy==1.26.4",
  "tqdm==4.66.4",
  "dill==0.3.8"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8"
]

[project.scripts]
fst2framegraph = "fst2framegraph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
